reprise à avant plugin corrections

--- a/assets/wadtoc.css
+++ b/assets/wadtoc.css
@@ -1,4 +1,4 @@
-/* Table of Contents – WAD TOC - styles principaux */
+/* Table de matière (wadtoc) - styles principaux */
 .wadtoc-wrap {
     border-radius: 5px;
     padding: 10px;
