--- a/assets/wadtoc.css
+++ b/assets/wadtoc.css
@@ -6,6 +6,7 @@
     overflow: hidden;
     width: fit-content;
     border: 1px solid #a8a8a8;
+    margin: 0;
 }
 
 .wadtoc-header {
@@ -13,10 +14,14 @@
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
+    padding: 0;
+    margin: 0;
 }
 
 .wadtoc-title {
     font-size: 110%;
+    padding: 0;
+    margin: 0;
 }
 
 .wadtoc-toggle {
@@ -27,6 +32,8 @@
     cursor: pointer;
     display: flex;
     align-items: center;
+    padding: 0;
+    margin: 0;
 }
 
 .wadtoc-toggle:hover,
@@ -45,6 +52,8 @@
     height: 20px;
     position: relative;
     transition: transform 0.3s ease;
+    padding: 0;
+    margin: 0;
 }
 
 .wadtoc-toggle-icon:before,
@@ -83,6 +92,8 @@
     overflow: hidden;
     transition: max-height 0.4s ease, padding 0.3s ease;
     background: transparent;
+    padding: 0;
+    margin: 0;
 }
 
 .wadtoc-level-1 { margin-left: 0em; font-size: 95%; }
@@ -99,8 +110,16 @@
 .wadtoc-list {
     line-height: 1.6em;
     list-style: none;
-    margin: 0;
-    padding: 0;
+    margin: 0 !important;
+    padding-left: 0 !important;
+    padding: 0 !important;
+
+}
+.wadtoc-list ul {
+    padding: 0 !important;
+    padding-left: 0 !important;
+    margin-top: 0 !important;
+	margin-bottom: 0 !important;
 }
 
 
